...
    <string name="timer">%d</string>
    <string name="correct">Correct</string>
    <string name="wrong">Incorrect</string>
    <string name="too_late">Trop tard</string>

    <string name="position_label">%d / %d</string>
    <string name="no_score">N/A</string>
    <string name="score_label">Score</string>
    <string name="time_average_label">Temps de réponse moyen</string>
    <string name="score_percent">%d%%</string>
    <string name="button_leave_score">OK</string>

    <string name="navigation_drawer_open">Ouvrir le menu</string>
    <string name="navigation_drawer_close">Fermer le menu</string>

    <string name="action_settings">Paramètres</string>
...
    <string name="error_invalid_password">Mot de passe invalide</string>
    <string name="error_field_required">Le champs est obligatoire</string>
    <string name="error_age_invalid">L\'âge est trop grand</string>
    <string name="permission_rationale">"Autorisez l'accès aux contacts pour completer l'email."
    </string>

    <string name="statistics_navigation_personal">Personnel</string>
    <string name="statistics_navigation_global">Global</string>

    <string name="stat_total">Total</string>
    <string name="chart_time_average">%.1f\nsec</string>

    <string name="about">Teach Yourself - Application</string>

...
